# fastvec

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml  pytest.ini  test_problem.py
.github/workflows/: CI.yml  rust_bench.yml  tests.yml
benches/: w2v_bench.rs
benchmarking/: benchmark.py  benchmark.sh  benchmark_fastvec.py  benchmark_gensim.py  fastvec_output.txt  utils.py
benchmarking/walltimes/: fastvec_food_reviews.txt  gensim_food_reviews.txt
fastvec/: __init__.py  doc2vec.py  model.py  word2vec.py
src/: build.rs  builder.rs  data.rs  dataset.rs  doc2vec.rs  embedding.rs  lib.rs  model.rs  preprocessing.rs  utils.rs  vocab.rs  word2vec.rs
tests/: test_d2v.py  test_w2v.py
