[package]
name = "fastvec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastvec"
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.14.0"
ndarray =  { version="0.16.1", features=["blas"] }
blas-src = { version = "0.10.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas"] }
ndarray-rand = "0.15.0"
pyo3 = "0.25.0"
rand = "0.9.1"
random_word = { version = "0.5.0", features = ["en"] }
rayon = "1.10.0"
regex = "1.11.1"
unicode-normalization = "0.1.24"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"

[target.'cfg(macos)'.dependencies]
blas-src = { version = "0.10.0", default-features = false, features = ["accelerate"] }

[profile.release]
codegen-units = 1
lto = "fat"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "w2v_bench"
harness = false
