[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "fastvec"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.24.4",
    "tqdm>=4.67.1",
]
[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
benchmark = [
    "gensim>=4.3.3",
    "pandas>=2.0.3",
]
dev = [
    "pyperf>=2.8.0",
    "pytest>=8.3.5",
    "ruff>=0.12.2",
]
